<resources>
    <string name="app_name">SeeYou</string>
    <string name="title_activity_maps">Карта</string>
    <string name="personal_data">Личные данные</string>
    <string name="friends">Друзья</string>
    <string name="settings">Настройки</string>
    <string name="default_info_title">Ошибка местоположения</string>
    <string name="default_info_snippet">Местоположение не найдено, так как местоположение недступно.</string>
    <string name="pick_place">Выберите местоположение</string>
    <string name="option_get_place">Получить место</string>
    <string name="full_name">Полное имя</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="login_to_register">Впервые на SeeYou? Регистрация</string>
    <string name="register_to_login">У вас есть учетная запись? Войти</string>
    <string name="btn_register">Зарегистрироваться</string>
    <string name="btn_login">Войти</string>
</resources>
